<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:gravity="bottom">

    <Button
        android:id="@+id/btn_adjust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/btn_adjust"/>

    <Button
        android:id="@+id/btn_effect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/btn_effect"/>

    <Button
        android:id="@+id/btn_texture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/btn_texture"/>

    <Button
        android:id="@+id/btn_blur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/btn_blur"/>

    <Button
        android:id="@+id/btn_curve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/btn_curve"/>

    <Button
        android:id="@+id/btn_hue_saturation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/btn_hue_saturation"/>

    <Button
        android:id="@+id/btn_tone_separation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/btn_tone_separation"/>

    <Button
        android:id="@+id/btn_color_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/btn_color_balance"/>
</LinearLayout>