<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_filter_title"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp60"
    android:layout_above="@id/layout_filter_content"
    android:gravity="center_vertical">

    <Button
        android:id="@+id/btn_internal"
        android:layout_width="@dimen/dp60"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/btn_internal"/>

    <Button
        android:id="@+id/btn_customize"
        android:layout_width="@dimen/dp60"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btn_internal"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/btn_customize"/>

    <Button
        android:id="@+id/btn_collection"
        android:layout_width="@dimen/dp60"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btn_customize"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/btn_collection"/>

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="@dimen/dp60"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"
        android:text="@string/btn_setting"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="@dimen/dp60"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_toStartOf="@id/btn_setting"
        android:textColor="@android:color/white"
        android:text="@string/btn_add"/>
</RelativeLayout>